--- a/client-myjss/src/app/modules/my-account/components/overview/overview.component.html
+++ b/client-myjss/src/app/modules/my-account/components/overview/overview.component.html
@@ -83,17 +83,11 @@
 
 
   <!-- Address -->
-  <section class="col">
-    <div class="card h-100 border-0 py-1 p-md-2 p-xl-3 p-xxl-4">
-      <div class="card-body">
-        <div class="d-flex align-items-center mt-sm-n1 pb-4 mb-1 mb-lg-2">
-          <i class="ai-map-pin text-primary lead pe-1 me-2"></i>
-          <h2 class="h4 mb-0">Address</h2>
-          <a class="btn btn-sm btn-secondary ms-auto" href="account-settings.html">
-            <i class="ai-edit ms-n1 me-2"></i>
-            Edit info
-          </a>
-        </div>
+  <section class="card border-0 py-1 p-md-2 p-xl-3 p-xxl-4 mb-4" *ngIf="currentUser">
+    <div class="card-body">
+      <div class="d-flex align-items-center mt-sm-n1 pb-4 mb-0 mb-lg-1 mb-xl-3">
+        <i class="ai-map-pin text-primary lead pe-1 me-2"></i>
+        <h2 class="h4 mb-0">Mes informations</h2>
         <div class="d-flex align-items-center pb-1 mb-2">
           <h3 class="h6 mb-0 me-3">Shipping address</h3>
           <span class="badge bg-primary bg-opacity-10 text-primary">Primary</span>
