--- a/client-myjss/src/app/modules/offers/components/offers/offers.component.html
+++ b/client-myjss/src/app/modules/offers/components/offers/offers.component.html
@@ -18,7 +18,8 @@
 
     <!-- Item -->
     <div class="col">
-      <a class="card card-hover-primary bg-secondary border-0 h-100 text-decoration-none" href="#">
+      <a class="card card-hover-primary bg-secondary border-0 h-100 text-decoration-none" (click)="openProduct($event)"
+        style="cursor: pointer;">
         <div class="card-body pb-0">
           <svg class="d-block text-warning mb-4" width="40" height="40" viewBox="0 0 40 40" fill="currentColor"
             xmlns="http://www.w3.org/2000/svg">
@@ -46,7 +47,8 @@
 
     <!-- Item -->
     <div class="col">
-      <a class="card card-hover-primary bg-secondary border-0 h-100 text-decoration-none" href="#">
+      <a class="card card-hover-primary bg-secondary border-0 h-100 text-decoration-none" (click)="openProduct($event)"
+        style="cursor: pointer;">
         <div class="card-body pb-0">
           <svg class="d-block text-warning mb-4" width="40" height="40" viewBox="0 0 40 40" fill="currentColor"
             xmlns="http://www.w3.org/2000/svg">
@@ -68,7 +70,8 @@
 
     <!-- Item -->
     <div class="col">
-      <a class="card card-hover-primary bg-secondary border-0 h-100 text-decoration-none" href="#">
+      <a class="card card-hover-primary bg-secondary border-0 h-100 text-decoration-none" (click)="openProduct($event)"
+        style="cursor: pointer;">
         <div class="card-body pb-0">
           <svg class="d-block text-warning mb-4" width="40" height="40" viewBox="0 0 40 40" fill="currentColor"
             xmlns="http://www.w3.org/2000/svg">
@@ -114,7 +117,8 @@
 
     <!-- Item -->
     <div class="col">
-      <a class="card card-hover-primary bg-secondary border-0 h-100 text-decoration-none" href="#">
+      <a class="card card-hover-primary bg-secondary border-0 h-100 text-decoration-none" (click)="openProduct($event)"
+        style="cursor: pointer;">
         <div class="card-body pb-0">
           <svg class="d-block text-warning mb-4" width="40" height="40" viewBox="0 0 40 40" fill="currentColor"
             xmlns="http://www.w3.org/2000/svg">
@@ -139,7 +143,8 @@
 
     <!-- Item -->
     <div class="col">
-      <a class="card card-hover-primary bg-secondary border-0 h-100 text-decoration-none" href="#">
+      <a class="card card-hover-primary bg-secondary border-0 h-100 text-decoration-none" (click)="openProduct($event)"
+        style="cursor: pointer;">
         <div class="card-body pb-0">
           <svg class="d-block text-warning mb-4" width="40" height="40" viewBox="0 0 40 40" fill="currentColor"
             xmlns="http://www.w3.org/2000/svg">
@@ -161,7 +166,8 @@
 
     <!-- Item -->
     <div class="col">
-      <a class="card card-hover-primary bg-secondary border-0 h-100 text-decoration-none" href="#">
+      <a class="card card-hover-primary bg-secondary border-0 h-100 text-decoration-none" (click)="openProduct($event)"
+        style="cursor: pointer;">
         <div class="card-body pb-0">
           <svg class="d-block text-warning mb-4" width="40" height="40" viewBox="0 0 40 40" fill="currentColor"
             xmlns="http://www.w3.org/2000/svg">
