EVO 4889 cherry-pick

--- a/client/src/app/modules/invoicing/components/direct-debit-transfert-list/direct-debit-transfert-list.component.html
+++ b/client/src/app/modules/invoicing/components/direct-debit-transfert-list/direct-debit-transfert-list.component.html
@@ -34,6 +34,11 @@
             label="Masquer les prélèvements exportés" [form]="transfertForm"
             propertyName="isHideExportedBankTransfert"></generic-toggle>
         </td>
+        <td>
+          <generic-toggle [(model)]="transfertSearch.isHideMatchedDirectDebitTransfert"
+            label="Masquer les prélèvements rapprochés" [form]="transfertForm"
+            propertyName="isHideMatchedDirectDebitTransfert"></generic-toggle>
+        </td>
       </tr>
     </table>
     <sort-table [actions]="tableAction" [columns]="displayedColumns" [values]="transfers" tableName="Virements"
