--- a/client/src/app/modules/invoicing/components/invoicing/invoicing.component.html
+++ b/client/src/app/modules/invoicing/components/invoicing/invoicing.component.html
@@ -25,5 +25,15 @@
         <direct-debit-transfer-list></direct-debit-transfer-list>
       </ng-template>
     </mat-tab>
+    <mat-tab label="Chèques sortants">
+      <ng-template matTabContent>
+        <outbound-check-list></outbound-check-list>
+      </ng-template>
+    </mat-tab>
+    <mat-tab label="Solde bancaire">
+      <ng-template matTabContent>
+        <bank-balance></bank-balance>
+      </ng-template>
+    </mat-tab>
   </mat-tab-group>
 </div>
