EVO to add toggle filter in Invoicing, on direct-debit-transfert, bank-transfert, refund, and add two new pages for outbound checks and global bank balance

--- a/client/src/app/modules/invoicing/components/bank-transfert-list/bank-transfert-list.component.html
+++ b/client/src/app/modules/invoicing/components/bank-transfert-list/bank-transfert-list.component.html
@@ -42,6 +42,11 @@
             label="Afficher la sélection" [form]="transfertForm"
             propertyName="isDisplaySelectedForExportBankTransfert"></generic-toggle>
         </td>
+        <td>
+          <generic-toggle [(model)]="transfertSearch.isHideMatchedBankTransfert"
+            label="Masquer les virements rapprochés" [form]="transfertForm"
+            propertyName="isHideMatchedBankTransfert"></generic-toggle>
+        </td>
       </tr>
     </table>
     <sort-table [actions]="tableAction" [columns]="displayedColumns" [values]="transfers" tableName="Virements"
