my-jss : begining of order creation

--- a/client-myjss/src/app/modules/my-account/components/user-settings/user-settings.component.html
+++ b/client-myjss/src/app/modules/my-account/components/user-settings/user-settings.component.html
@@ -263,7 +263,7 @@
           <ng-container *ngFor="let document of documents ">
             <ng-container *ngIf="document.documentType.code == documentTypePaper.code ">
               <div class="d-flex align-items-center pb-1 mb-2">
-                <h3 class="h6 mb-0 me-3 mt-3">Destinataires des documents papiers</h3>
+                <h3 class="h6 mb-0 me-3 mt-3">Destinataires des documents papiers (sur demande)</h3>
               </div>
               <div class="form-check">
                 <div class="form-check" [formGroup]="documentForm">
