--- a/client/src/app/modules/administration/components/referentials/referential-service-family/referential-service-family.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-service-family/referential-service-family.component.html
@@ -36,6 +36,13 @@
           </tr>
           <tr>
             <td>
+              <generic-textarea [(model)]="selectedEntity.comment" label="Commentaire MyJSS" [form]="entityForm"
+                propertyName="comment" [isMandatory]="false" [isDisabled]="!editMode"
+                [numberOfLines]="5"></generic-textarea>
+            </td>
+          </tr>
+          <tr>
+            <td>
               <select-service-family-group [(model)]="selectedEntity.serviceFamilyGroup"
                 label="Groupe de familles de service" [form]="entityForm" propertyName="serviceFamilyGroup"
                 [isMandatory]="true" [isDisabled]="!editMode"></select-service-family-group>
