--- a/client/src/app/modules/invoicing/components/bank-balance/bank-balance.component.html
+++ b/client/src/app/modules/invoicing/components/bank-balance/bank-balance.component.html
@@ -1,14 +1,17 @@
 <h3>{{accountingAccountJss.label}} </h3>
 
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<table mat-table matTableExporter [dataSource]="dataSource" class="mat-elevation-z8" #exporter="matTableExporter">
   <ng-container matColumnDef="label">
     <th mat-header-cell *matHeaderCellDef> Indicateur </th>
     <td mat-cell *matCellDef="let element"> {{element.label}} </td>
   </ng-container>
   <ng-container matColumnDef="amount">
     <th mat-header-cell *matHeaderCellDef> Montant (en &#x20AC;)</th>
-    <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.amount | currency:'EUR'}} </td>
   </ng-container>
   <tr mat-header-row *matHeaderRowDef="displayedColumnsTotal"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumnsTotal;"></tr>
 </table>
+<mat-icon color="accent" class="export-icon pointer" matTooltip="Exporter en Excel"
+  (click)="exporter.exportTable('csv', {fileName:tableName, sheet: tableName, delimiter:';', bookSST :true})">file_download
+</mat-icon>
