--- a/src/main/resources/mails/templates/quotation-page.html
+++ b/src/main/resources/mails/templates/quotation-page.html
@@ -224,7 +224,9 @@
     <p>Pour la réalisation de ce devis, la liste des pièces jointes suivantes est usuellement nécessaire :</p>
     <ul>
         <th:block th:if="${assos!=null}" th:each="asso : ${assos}">
-            <th:block th:if="${asso.services!=null}" th:each="service : ${asso.services}">
+            <th:block
+                th:if="${asso.services!=null} and ${service.assoServiceDocuments!=null} and ${assoServiceDocument.isMandatory}"
+                th:each="service : ${asso.services}">
                 <li><span th:text="${service.serviceType.label}"></span> : </li>
                 <ul>
                     <li th:if="${service.assoServiceDocuments!=null} and ${assoServiceDocument.isMandatory}"
