myjss : continue add order

--- a/client-myjss/src/app/app.component.html
+++ b/client-myjss/src/app/app.component.html
@@ -2,5 +2,5 @@
   <top-bar *ngIf="isDisplayHeader()"></top-bar>
   <router-outlet></router-outlet>
   <main-footer *ngIf="isDisplayFooter()"></main-footer>
-  <toast style="display: block; position: fixed; bottom: 20px; right: 20px;"></toast>
+  <toast style="display: block; position: fixed; bottom: 20px; right: 20px;" class="z-3"></toast>
 </main>
