--- a/client/src/app/modules/administration/components/referentials/referential-service-family/referential-service-family.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-service-family/referential-service-family.component.html
@@ -36,6 +36,13 @@
           </tr>
           <tr>
             <td>
+              <generic-input [(model)]="selectedEntity.customLabel" label="Nom fonctionnel MyJSS" [maxLength]="255"
+                [form]="entityForm" propertyName="customLabel" [isMandatory]="false"
+                [isDisabled]="!editMode"></generic-input>
+            </td>
+          </tr>
+          <tr>
+            <td>
               <generic-textarea [(model)]="selectedEntity.comment" label="Commentaire MyJSS" [form]="entityForm"
                 propertyName="comment" [isMandatory]="false" [isDisabled]="!editMode"
                 [numberOfLines]="5"></generic-textarea>
